--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.15",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "graphql": "^16.6.0",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
