--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -10,5 +10,8 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     volumes:
-      - ./postgres:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
       - ./database.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      
+volumes:
+  pgdata:
