--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "db": "cd database && docker-compose up -d && cd .."
+    "db": "cd database && docker-compose up -d && cd ..",
+    "resetdb": "cd database && docker-compose down -v && docker-compose up -d && cd .."
   },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
