--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./database.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      - ./seed.sql:/seed.sql
       
 volumes:
   pgdata:
