--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,11 +12,11 @@
     "@apollo/client": "^3.7.15",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/react": "1.0.0-beta.13",
     "graphql": "^16.6.0",
     "next": "^13.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
