--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,7 +16,8 @@
     "graphql": "^16.6.0",
     "next": "^13.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
