--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./database.sql:/docker-entrypoint-initdb.d/create_tables.sql
       - ./seed.sql:/seed.sql
-      
+      - ./drop.sql:/drop.sql
+
 volumes:
   pgdata:
