--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - ./database.sql:/docker-entrypoint-initdb.d/create_tables.sql
       - ./seed.sql:/seed.sql
       - ./drop.sql:/drop.sql
+      - ./delete.sql:/delete.sql
 
 volumes:
   pgdata:
