--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "db": "cd database && docker-compose up -d && cd ..",
     "dbdroptables": "cd database && docker-compose exec db psql -U postgres -d samba_escolas -f drop.sql && cd ..",
     "dbseed": "cd database && docker-compose exec db psql -U postgres -d samba_escolas -f seed.sql && cd ..",
+    "dbdelete": "cd database && docker-compose exec db psql -U postgres -d samba_escolas -f delete.sql && cd ..",
     "dropdb": "cd database && docker-compose down -v && cd ..",
     "resetdb": "cd database && docker-compose down -v && docker-compose up -d && cd .."
   },
